--- a/change-password.html
+++ b/change-password.html
@@ -274,11 +274,11 @@
                     csrfToken = data.csrf_token;
                 }
             } catch (error) {
-                console.error('CSRF token load error:', error);
+                console.error('Security verification unavailable:', error);
             }
         }
 
-        // Load CSRF token on page load
+        // Load security verification on page load
         loadCSRFToken();
 
         function sanitizeInput(input) {
@@ -388,13 +388,13 @@
                     }, 2000);
                 } else if (response.status === 403 && data.detail?.includes('CSRF')) {
                     await loadCSRFToken();
-                    showError('Security token expired. Please try again.');
+                    showError('Session expired — please try again');
                 } else {
-                    showError(data.detail || data.message || 'Error updating password. Please check your current password.');
+                    showError(data.detail || data.message || 'Could not update password — please check your current password and try again');
                 }
             } catch (error) {
                 console.error('Network error:', error);
-                showError('Network error. Please try again.');
+                showError('Could not connect — please check your internet and try again');
             }
         });
     </script>
