--- a/dashboard.html
+++ b/dashboard.html
@@ -264,7 +264,7 @@
                     <option value="deriv">Deriv</option>
                     <option value="other">Other brokers (coming soon)</option>
                 </select>
-                <button id="broker-oauth-btn" class="broker-oauth-btn" disabled>Connect to OAuth</button>
+                <button id="broker-oauth-btn" class="broker-oauth-btn" disabled>Connect</button>
                 <button id="modal-close-btn" class="modal-close-btn">Cancel</button>
             </div>
         </div>
