--- a/forgot-password.html
+++ b/forgot-password.html
@@ -127,7 +127,7 @@
         const token = urlParams.get('token');
 
         if (!token) {
-            alert('Invalid or missing reset token');
+            alert('Reset link expired or invalid — please request a new one');
             window.location.href = 'index.html';
         }
 
