--- a/privacy.html
+++ b/privacy.html
@@ -63,7 +63,7 @@
   <ul>
     <li>Device information, browser type, IP address, referral URLs</li>
     <li>Usage patterns, interaction logs, clickstream analytics</li>
-    <li>Session identifiers, location approximations (city-level only)</li>
+    <li>Session information, location approximations (city-level only)</li>
   </ul>
 
   <h3>c. Cookies and Similar Technologies</h3>
