--- a/reset-password.html
+++ b/reset-password.html
@@ -126,7 +126,7 @@
         const token = urlParams.get('token');
         
         if (!token) {
-            alert('Invalid reset link');
+            alert('Reset link expired or invalid — please request a new one');
             window.location.href = 'index.html';
         }
 
