--- a/terms.html
+++ b/terms.html
@@ -69,11 +69,11 @@
 
     By using the Services, you warrant that all information provided is accurate, complete, and lawful. You further affirm that you have the legal right and authorization to connect your brokerage account to our Services.</p>
 
-  <h2>5. Account and Security</h2>   <ul>     <li>You are responsible for maintaining the confidentiality of your account login credentials, including all broker API keys, OAuth tokens, and delegation authorizations.</li>     <li>You agree to notify Beaverly immediately of any unauthorized use or suspected breach.</li>     <li>We are not liable for any loss or damage resulting from your failure to safeguard your account. Beaverly does not store or access your brokerage account passwords.</li>   </ul>
+  <h2>5. Account and Security</h2>   <ul>     <li>You are responsible for maintaining the confidentiality of your account login credentials and broker connection authorizations.</li>     <li>You agree to notify Beaverly immediately of any unauthorized use or suspected breach.</li>     <li>We are not liable for any loss or damage resulting from your failure to safeguard your account. Beaverly does not store or access your brokerage account passwords.</li>   </ul>
 
 <h2>6. User Delegation, Authority, and Order Execution </h2>
 
-Delegation of Authority: By linking your brokerage account via API or OAuth, you explicitly and irrevocably delegate your full execution authority to the Chilla™ Cloud Agent (running on Beaverly’s infrastructure) to act as your personal, non-discretionary technological agent solely for the purpose of submitting orders on your behalf based on your selected strategy parameters.
+Delegation of Authority: By connecting your brokerage account, you explicitly and irrevocably delegate your full execution authority to the Chilla™ Cloud Agent (running on Beaverly's infrastructure) to act as your personal, non-discretionary technological agent solely for the purpose of submitting orders on your behalf based on your selected strategy parameters.
 
 User Control and Instruction: The Order Logic (the trade signal, size, and timing) is defined entirely by the User's activation and configuration of the Chilla™ system. Beaverly's underlying technology (M-II) only processes and transmits this logic. Beaverly maintains no pooling or discretionary decision-making authority over the trades executed on your behalf.
 
