--- a/mandate-wizard.html
+++ b/mandate-wizard.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta name="Referrer-Policy" content="strict-origin-when-cross-origin">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://work.beaverlyai.com https://www.googletagmanager.com https://cdn.botpress.cloud https://files.bpcontent.cloud https://cdn.jsdelivr.net 'sha256-SCfHb0f59QEhuYaon2DqnZfALcsBcsqwAhgV/RxmHnI='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' data: https://cook.beaverlyai.com https://coox.beaverlyai.com https://work.beaverlyai.com https://www.google.com.ng; connect-src 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://work.beaverlyai.com wss://cook.beaverlyai.com wss://coox.beaverlyai.com wss://work.beaverlyai.com https://www.google-analytics.com https://analytics.google.com https://stats.g.doubleclick.net https://webchat.botpress.cloud wss://webchat.botpress.cloud https://cdn.jsdelivr.net; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://work.beaverlyai.com;">
     <title>Get Started - Chilla by Beaverly</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/mandate-wizard.css">
