--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta name="Referrer-Policy" content="strict-origin-when-cross-origin">
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://work.beaverlyai.com https://www.googletagmanager.com https://cdn.botpress.cloud https://files.bpcontent.cloud https://cdn.jsdelivr.net 'sha256-SCfHb0f59QEhuYaon2DqnZfALcsBcsqwAhgV/RxmHnI='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' data: https://cook.beaverlyai.com https://coox.beaverlyai.com https://work.beaverlyai.com https://www.google.com.ng; connect-src 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://work.beaverlyai.com wss://cook.beaverlyai.com wss://coox.beaverlyai.com wss://work.beaverlyai.com https://www.google-analytics.com https://analytics.google.com https://stats.g.doubleclick.net https://webchat.botpress.cloud wss://webchat.botpress.cloud https://cdn.jsdelivr.net; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://work.beaverlyai.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://wofk.beaverlyai.com https://work.beaverlyai.com https://www.googletagmanager.com https://cdn.botpress.cloud https://files.bpcontent.cloud https://cdn.jsdelivr.net 'sha256-SCfHb0f59QEhuYaon2DqnZfALcsBcsqwAhgV/RxmHnI='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' data: https://cook.beaverlyai.com https://coox.beaverlyai.com https://wofk.beaverlyai.com https://work.beaverlyai.com https://www.google.com.ng https://www.google.com https://stats.g.doubleclick.net; connect-src 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://wofk.beaverlyai.com https://work.beaverlyai.com wss://cook.beaverlyai.com wss://coox.beaverlyai.com wss://wofk.beaverlyai.com wss://work.beaverlyai.com https://www.google-analytics.com https://analytics.google.com https://stats.g.doubleclick.net https://region1.google-analytics.com https://webchat.botpress.cloud wss://webchat.botpress.cloud https://cdn.jsdelivr.net; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self' https://cook.beaverlyai.com https://coox.beaverlyai.com https://wofk.beaverlyai.com https://work.beaverlyai.com;">
     <title>Chilla – You chill. Chilla works.</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
@@ -25,7 +25,10 @@
         <!-- Loading Screen -->
         <div id="loading-screen" class="loading-screen">
             <div class="loading-content">
-                <div class="logo">Chilla</div>
+                <div class="logo logo-lg">
+                    <div class="logo-icon"></div>
+                    <div class="logo-text">Chilla</div>
+                </div>
                 <div class="loading-spinner"></div>
             </div>
         </div>
@@ -35,7 +38,10 @@
             <!-- Login Screen -->
             <div id="login-screen" class="auth-screen">
                 <div class="auth-header">
-                    <h1 class="logo-text">Chilla</h1>
+                    <div class="logo logo-md" style="margin-bottom: 0.5rem;">
+                        <div class="logo-icon"></div>
+                        <h1 class="logo-text">Chilla</h1>
+                    </div>
                     <p class="subtitle">You chill. Chilla works.</p>
                 </div>
                 <div class="auth-form">
