refactor: Simplify logo component structure and enhance styling; update dashboard and index HTML for consistency

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,10 +23,7 @@
         <!-- Loading Screen -->
         <div id="loading-screen" class="loading-screen">
             <div class="loading-content">
-                <div class="logo logo-lg">
-                    <div class="logo-icon"></div>
-                    <div class="logo-text">Chilla</div>
-                </div>
+                <div class="logo">Chilla</div>
                 <div class="loading-spinner"></div>
             </div>
         </div>
@@ -41,10 +38,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12h18M3 6h18"/>
                         </svg>
                     </button>
-                    <div class="logo logo-sm" style="margin-bottom: 0; gap: 0.5rem;">
-                        <div class="logo-icon"></div>
-                        <h1 class="app-title logo-text">Chilla</h1>
-                    </div>
+                    <h1 class="app-title">Chilla</h1>
                 </div>
                 <button id="nav-connect-btn" class="icon-btn" aria-label="Connect broker">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
