--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         <!-- Loading Screen -->
         <div id="loading-screen" class="loading-screen">
             <div class="loading-content">
-                <div class="logo logo-lg">
-                    <div class="logo-icon"></div>
-                    <div class="logo-text">Chilla</div>
-                </div>
+                <div class="logo">Chilla</div>
                 <div class="loading-spinner"></div>
             </div>
         </div>
@@ -38,10 +35,7 @@
             <!-- Login Screen -->
             <div id="login-screen" class="auth-screen">
                 <div class="auth-header">
-                    <div class="logo logo-md" style="margin-bottom: 0.5rem;">
-                        <div class="logo-icon"></div>
                         <h1 class="logo-text">Chilla</h1>
-                    </div>
                     <p class="subtitle">You chill. Chilla works.</p>
                 </div>
                 <div class="auth-form">
