feat: Add mandate card and activity card styles; enhance empty state UI in dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -149,7 +149,19 @@
                         </div>
                         <div id="mandate-details" class="mandate-details">
                             <div class="mandate-message">
-                                <p>No active instructions. <a href="mandate-wizard.html" class="setup-link">Create your execution instructions</a> to get started.</p>
+                                <div class="mandate-empty-state">
+                                    <svg class="empty-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
+                                    </svg>
+                                    <h3>No active instructions</h3>
+                                    <p>Set up your execution instructions</p>
+                                    <a href="mandate-wizard.html" class="setup-button">
+                                        <svg class="button-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+                                        </svg>
+                                        Create Instructions
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div id="mandate-active-view" class="mandate-active-view hidden">
