refactor: Update mandate card and dashboard messages for clarity; enhance user guidance

--- a/dashboard.html
+++ b/dashboard.html
@@ -144,8 +144,8 @@
                     <!-- Mandate Status Card (NEW) -->
                     <div id="mandate-status-card" class="mandate-card">
                         <div class="mandate-header">
-                            <h2>Your execution instructions</h2>
-                            <span id="mandate-status-badge" class="status-badge unauthorized">Not authorized</span>
+                            <h2>Execution instructions</h2>
+                            <span id="mandate-status-badge" class="status-badge unauthorized">None</span>
                         </div>
                         <div id="mandate-details" class="mandate-details">
                             <div class="mandate-message" id="mandate-create-target" role="button" tabindex="0" aria-label="Create execution instructions">
@@ -185,8 +185,8 @@
                                 </div>
                             </div>
                             <div class="mandate-actions">
-                                <button id="pause-mandate-btn" class="mandate-action-btn pause-btn">Pause instructions</button>
-                                <button id="revoke-mandate-btn" class="mandate-action-btn revoke-btn">Revoke instructions</button>
+                                <button id="pause-mandate-btn" class="mandate-action-btn pause-btn">Pause all instructions</button>
+                                <button id="revoke-mandate-btn" class="mandate-action-btn revoke-btn">Cancel all instructions</button>
                             </div>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                             </div>
                             <div class="status-details">
                                 <div class="status-info">
-                                    <span>Connect a broker so Chilla can execute instructions for you.</span>
+                                    <span>Connect a broker so Chilla can execute your instructions.</span>
                                 </div>
                             </div>
                         </div>
